# tg_bot

./: .gitignore  main.py  pyproject.toml
src/: abs_api.py  files.py  vacancy.py
